--- a/Dev Utility/Dev Utility/Dev Utility.vcxproj
+++ b/Dev Utility/Dev Utility/Dev Utility.vcxproj
@@ -47,8 +47,8 @@
       <AdditionalIncludeDirectories>C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Inc;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\GSRoot;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\GSUtils;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\InputOutput;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\DGLib;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\DGGraphix;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\UCLib;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\UDLib;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\TextEngine;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\Geometry;C:\Program Files\Graphisoft\API Development Kit 19.3003\Support\Modules\VBElemDialogs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <WarningLevel>Level3</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <WarningLevel>Level4</WarningLevel>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_ITERATOR_DEBUG_LEVEL=0;WIN32;_DEBUG;WINDOWS;_WINDOWS;_USRDLL;_STLP_DONT_FORCE_MSVC_LIB_NAME;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
